# swpp202301-compiler-team5

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE.md  README.md
.github/workflows/: test.yml
src/: args.cpp  args.h  fs.cpp  fs.h  lib.cpp  lib.h  main.cpp  result.h  static_error.h
src/lib/: backend.cpp  backend.h  opt.cpp  opt.h  parser.cpp  parser.h  print_ir.cpp  print_ir.h
src/lib/backend/: alloca_eliminate.cpp  alloca_eliminate.h  analysis.cpp  analysis.h  assembly.h  check_oracle.cpp  check_oracle.h  const_expr_eliminate.cpp  const_expr_eliminate.h  emitter.cpp  emitter.h  gep_const_combine.cpp  gep_const_combine.h  gep_eliminate.cpp  gep_eliminate.h  gv_eliminate.cpp  gv_eliminate.h  phi_preprocess.cpp  phi_preprocess.h  register_allocate.cpp  register_allocate.h  symbol.cpp  symbol.h
src/lib/backend/assembly/: inst.cpp  inst.h  int_t.cpp  int_t.h  register_t.cpp  register_t.h  width_t.cpp  width_t.h
src/lib/backend/symbol/: base.cpp  base.h
src/lib/opt/: README.md  add_licm.cpp  add_licm.h  add_o3.cpp  add_o3.h  add_sccp.cpp  add_sccp.h  add_sum.cpp  add_sum.h  aload_block.cpp  aload_block.h  aload_reordering.cpp  aload_reordering.h  br_to_switch.cpp  br_to_switch.h  branch_likely_analysis.cpp  branch_likely_analysis.h  declare.cpp  declare.h  heap_promotion.cpp  heap_promotion.h  likely_branch_condition.cpp  likely_branch_condition.h  load_reordering.cpp  load_reordering.h  load_to_aload.cpp  load_to_aload.h  loop_analysis.cpp  loop_analysis.h  loop_branch_condition.cpp  loop_branch_condition.h  malloc_free_reordering.cpp  malloc_free_reordering.h  oracle.cpp  oracle.h  passes.h  pre_oracle.cpp  pre_oracle.h  recursive_branch_condition.cpp  recursive_branch_condition.h  (+4 more)
test/: run.sh
test/filecheck/AddSumPass/: test1.ll  test2.ll  test3.ll
test/filecheck/AloadBlockPass/: test1.ll  test2.ll  test3.ll
test/filecheck/AloadReorderingPass/: test1.ll  test2.ll  test3.ll
test/filecheck/BrLikelyPrinterPass/: loop_test4.ll  recursive_test1.ll  recursive_test2.ll  recursive_test3.ll  recursive_test4.ll  recursive_test5.ll
test/filecheck/BrToSwitchPass/: test1.ll  test10.ll  test2.ll  test3.ll  test4.ll  test5.ll  test6.ll  test7.ll  test8.ll  test9.ll
test/filecheck/HeapPromotionPass/: test1.ll  test2.ll  test3.ll  test4.ll  test5.ll  test6.ll
test/filecheck/LicmPass/: test1.ll  test2.ll  test3.ll
test/filecheck/LikelyBranchConditionPass/: loop_test2.ll  loop_test3.ll  loop_test4.ll  recursive_test4.ll  recursive_test5.ll
test/filecheck/LoadReorderingPass/: test1.ll  test2.ll  test3.ll  test4.ll  test5.ll  test6.ll  test7.ll  test8.ll
test/filecheck/LoadToAloadPass/: test1.ll  test2.ll  test3.ll  test4.ll
test/filecheck/LoopBranchConditionPass/: test1.ll
test/filecheck/LoopsPrinterPass/: test1.ll  test2.ll  test3.ll
test/filecheck/MallocFreeReorderingPass/: test1.ll  test2.ll  test3.ll
test/filecheck/OraclePass/: loopbasedoracle1.ll  loopbasedoracle2.ll  loopbasedoracle3.ll  naiveoracle1.ll  naiveoracle2.ll  naiveoracle3.ll  naiveoracle4.ll  naiveoracle5.ll  naiveoracle6.ll
test/filecheck/PreOraclePass/: cluster1.ll  cluster2.ll  cluster3.ll  naivecluster1.ll  naivecluster2.ll  naivecluster3.ll
test/filecheck/RecursiveBranchConditionPass/: test1.ll  test2.ll  test3.ll  test5.ll
test/filecheck/SccpPass/: test1.ll  test2.ll  test3.ll
test/filecheck/ShiftConstantAddPass/: test1.ll  test2.ll  test3.ll
test/filecheck/SimplePass/: simple1.ll  simple2.ll  simple3.ll
test/filecheck/SwitchToBrPass/: test1.ll  test2.ll  test3.ll
